# PU-Winder

./: README.md
SKR-Pico_dev/winder_firmware/: BUILD_GUIDE.md  CMakeLists.txt  main.cpp  structure-dataflow.md
SKR-Pico_dev/winder_firmware/src/: lcd_display.cpp  lcd_display.h  move_queue.cpp  move_queue.h  stepcompress.cpp  stepcompress.h  tmc2209.cpp  winding_contorller.h
SKR-Pico_dev/winder_project/: BUILD_GUIDE.md  CMakeLists.txt  Operating_Guide.md  main.cpp
SKR-Pico_dev/winder_project/src/: config.h  encoder.cpp  encoder.h  move_queue.cpp  move_queue.h  pins_skr-pico_v1.h  scheduler.cpp  stepcompress.cpp  stepcompress.h  tmc2209.cpp  tmc2209.h  winding_controller.cpp  winding_controller.h
Winding Test Code/: BTS7960_Encoder_v1.1.ino  Motor-PID-Contorl-Test-v1.0  Stepper-Winder-Test-v1.0  winder_v1_4.ino  winder_v1_4_1.ino
Winding Test Code/Raspberry-Pi-pico-2-Winder-v1.0/: Raspberry-Pi-pico-2-Winder-v1.0.ino
Winding Test Code/S2PI-Winder_v1_0/: S2PI-Winder_v1_0.ino
Winding Test Code/Winder-pico2-v2_1/: Winder-pico2-v2_1.ino
Winding Test Code/Working_Base_winder_code_v1_0/: MotorController.cpp  Working_Base_winder_code_v1_0.ino
include/MotorController/: MotorController.h
include/MotorController/Example/: MotorContorller.ino  MotorContorller_rampTo.ino
